# cgo-rust-perf-test

./: .gitignore  Cargo.toml  README.md  bench.go  bloblang.go  build.sh  flog  go.mod  go.sum  helloRust.h  main.go  main_test.go  run.sh  test-go-50mb.sh  test-go-5mb.sh  test-rust-50mb.sh  test-rust-5mb.sh  test-vrl-50mb.sh  test-vrl-5mb.sh  test.sh  wasmtime.go  wazero.go
src/: bin.rs  lib.rs
