[package]
name = "helloRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name         = "helloRust"
crate-type   = ["rlib", "cdylib"] 

[[bin]]
name = "helloRust"
path = "src/bin.rs"


[dependencies]
libc = "0.2"
regex = "1.5"
lazy_static = "1.4.0"

serde_json = "1.0.87"

value = { git = "https://github.com/vectordotdev/vector", ref = "v0.22.2" }
vrl = { git = "https://github.com/vectordotdev/vector", ref = "v0.22.2" }
vrl-stdlib = { git = "https://github.com/vectordotdev/vector", ref = "v0.22.2" }
