[package]
name = "helloRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
debug=true


[lib]
name         = "helloRust"
crate-type   = ["rlib", "cdylib"]

[[bin]]
name = "helloRustBinary"
path = "src/bin.rs"

[dependencies]
libc = "0.2"
regex = "1.5"
lazy_static = "1.4.0"

serde_json = "1.0.87"

value = { git = "https://github.com/vectordotdev/vector", default-features = false }
vrl = { git = "https://github.com/vectordotdev/vector", default-features = false  }
vrl-diagnostic = { git = "https://github.com/vectordotdev/vector", package = "vrl-diagnostic"  }

[dependencies.vrl-stdlib]
package = "vrl-stdlib"
git = "https://github.com/vectordotdev/vector"
default-features = false
features = [
    "replace",
    "string",
]
